# simple_ats_agent

./: .env.example  .flake8  .gitignore  LICENSE.md  README.md  app.py  graph.py  pyproject.toml  test_graph.py
config/prompts/: instructions.txt
models/: schemas.py
nodes/: analysis.py  extraction.py  retrieval.py
plans/: README.md
tests/: test_nodes.py
utils/: __init__.py  cache_cleaner.py  logger.py  preprocessing.py
