[project]
name = "document-analysis-pipeline"
version = "1.0.0"
description = "A modular, production-ready template for LLM-powered document processing with RAG"
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "python-dotenv>=1.0.0",
    "langgraph>=1.1.3",
    "langchain-openai>=1.1.12",
    "langfuse>=4.5.0",
    "langchain>=1.2.15",
    "gradio>=6.13.0",
    "llm-guard>=0.3.16",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-chroma>=1.1.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]